14127
this is a bad one; I won't be able to report other bugs on the trunk until it's fixed.

{code}
  ~/nl/new> cat p/J.java 
package p ;
class J { J() { } }
  ~/nl/new> cat p/S.scala
package p
class S { new J }
  ~/nl/new> ~/scala.trunk/dists/latest/bin/scalac p/J.java p/S.scala 
p/S.scala:2: error: p.J does not have a constructor
class S { new J }
          ^
one error found
{code}

I'm on the trunk at r17402.

